--- a/zorkington.css
+++ b/zorkington.css
@@ -16,6 +16,7 @@ h1 {
     width: 100%;
     margin: 20px 20px 20px -40px;
     height: 100px;
+    line-height: 1.2em;
 }
 #buttons {
     text-align: center;
@@ -37,6 +38,7 @@ button {
     padding: 20px;
     margin: 10px 20px 20px -40px;
     height: 280px;
+    line-height: 1.2em;
 }
 #wrapper {
     width: 75%;
